--- a/bounty.html
+++ b/bounty.html
@@ -23,20 +23,99 @@
     <div class="wrap">
 
 
+
         <!-- header -->
-        <header class="header header-logo">
+        <header class="header header-sto">
             <div class="inner-wrap">
                 <div class="logo-wrap">
                     <a href="" class="logo">
                         <img src="./img/main/logo.svg" alt="">
                     </a>
                 </div>
+                <div class="actions-wrap">
+                    <div class="action-wrap action-login">
+                        <a href="" class="link-color">Log in</a>
+                    </div>
+                    <div class="action-wrap action-main">
+                        <a href="" class="btn">Sign up</a>
+                    </div>
+                    <div class="action-wrap action-fixed">
+                        <a href="" class="btn">Join Pre-STO whitelist</a>
+                    </div>
+                    <div class="popup-lang-wrap action-wrap js-popup-wrap">
+                        <a href="" class="btn-popup js-btn-toggle">En</a>
+                        <div class="popup-content-block js-popup-block">
+                            <ul class="menu">
+                                <li>
+                                    <a href="" class="btn-lang active">
+                                        <span class="button-ico">
+                                            <img src="./img/icons/lang01.png" alt="">
+                                        </span>
+                                        <span class="button-title">English</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="" class="btn-lang">
+                                        <span class="button-ico">
+                                            <img src="./img/icons/lang02.png" alt="">
+                                        </span>
+                                        <span class="button-title">Azərbaycan</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="" class="btn-lang">
+                                        <span class="button-ico">
+                                            <img src="./img/icons/lang03.png" alt="">
+                                        </span>
+                                        <span class="button-title">Español</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="" class="btn-lang">
+                                        <span class="button-ico">
+                                            <img src="./img/icons/lang04.png" alt="">
+                                        </span>
+                                        <span class="button-title">French</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="" class="btn-lang">
+                                        <span class="button-ico">
+                                            <img src="./img/icons/lang05.png" alt="">
+                                        </span>
+                                        <span class="button-title">Türkis</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="popup-menu-wrap js-popup-wrap">
+                    <a href="" class="btn-popup btn-action-ico ico-menu js-btn-toggle"></a>
+                    <div class="popup-content-block js-popup-block">
+                        <div class="menu-wrap">
+                            <ul class="menu">
+                                <li><a href="" class="btn-menu">Iban</a></li>
+                                <li><a href="" class="btn-menu">Payments</a></li>
+                                <li><a href="" class="btn-menu">Cards</a></li>
+                                <li><a href="" class="btn-menu">Cryptocurrency</a></li>
+                                <li><a href="" class="btn-menu">About</a></li>
+                                <li><a href="" class="btn-menu">Support</a></li>
+                            </ul>
+                        </div>
+                        <div class="links-wrap">
+                            <div class="link-wrap">
+                                <a href="" class="link-color">Log in</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </header>
         <!-- /header -->
 
         <!--main-menu-box-->
-        <div class="main-menu-box cnt-section">
+        <div class="main-menu-box menu-top cnt-section">
             <div class="inner-wrap">
                 <ul class="menu">
                     <li>
@@ -787,6 +866,7 @@
                 </div>
             </div>
         </div><!--/popup-outer-box-->
+
 
     </div>
     <!-- /wrap -->
