--- a/_html/pitch.html
+++ b/_html/pitch.html
@@ -978,7 +978,31 @@
 										<div class="tile-title">Use of funds</div>
 										<div class="tile-photo-wrap">
 											<div class="tile-photo">
-												<img src="./img/chart.svg" alt="">
+												<img src="./img/chart-main.svg" alt="">
+												<!--<img src="./img/chart.svg" alt="">
+												<div class="tile-photo-title title01">27.1%</div>
+												<div class="tile-photo-title title02">47.6%</div>
+												<div class="tile-photo-title title03">25.3%</div>-->
+											</div>
+											<div class="tile-legends">
+												<div class="tile-legend">
+													<div class="tile-legend-color">
+														<img src="./img/color01.svg" alt="">
+													</div>
+													<div class="tile-legend-title">G&A (47.6%)</div>
+												</div>
+												<div class="tile-legend">
+													<div class="tile-legend-color">
+														<img src="./img/color02.svg" alt="">
+													</div>
+													<div class="tile-legend-title">Liquidity reserves (25.3%)</div>
+												</div>
+												<div class="tile-legend">
+													<div class="tile-legend-color">
+														<img src="./img/color03.svg" alt="">
+													</div>
+													<div class="tile-legend-title">Marketing (27.1%)</div>
+												</div>
 											</div>
 										</div>
 									</div>
