--- a/_html/overview.html
+++ b/_html/overview.html
@@ -40,7 +40,7 @@
 			<!--/main-video-box-->
 			
 			<!--main-overview-tiles-box-->
-			<div class="main-overview-tiles-box cnt-section no-ptop no-pbottom-m">
+			<div class="main-overview-tiles-box cnt-section no-ptop no-pbottom">
 				<div class="inner-wrap">
 					<div class="main-title-wrap">
 						<div class="page-subtitle title-gradient">Crowdfunding</div>
@@ -105,6 +105,116 @@
 				</div>
 			</div>
 			<!--/main-overview-tiles-box-->
+			
+			
+			<!--main-overview-inner-box-->
+			<div class="main-overview-inner-box cnt-section no-pbottom-m">
+				<div class="inner-wrap">
+					<div class="main-title-wrap text-body-large">
+						<div class="page-subtitle title-gradient">Crowdfunding</div>
+						<h3 class="h1-title">Credits’ STO Overview</h3>
+						<p>It is similar to IPO but built on new innovative blockchain technology. We offer two options:</p>
+					</div>
+					<div class="items-wrap">
+						<!--item wrap-->
+						<div class="item-wrap">
+							<div class="item-tile-overview-rows text-body-main">
+								<div class="tile-title">Investment summary</div>
+								<div class="tile-row">
+									<div class="tile-help"></div>
+									<div class="tile-row-title">Main-STO target:</div>
+									<div class="tile-row-value">$25M. Starts in May, 2023</div>
+								</div>
+								<div class="tile-row">
+									<div class="tile-help"></div>
+									<div class="tile-row-title">Pre-STO target:</div>
+									<div class="tile-row-value">$3M. Starts in Mar, 2023</div>
+								</div>
+								<div class="tile-row">
+									<div class="tile-help"></div>
+									<div class="tile-row-title">Protect stage:</div>
+									<div class="tile-row-value">Series A: first users and revenue.</div>
+								</div>
+							</div>
+						</div>
+						<!--/item wrap-->
+						<!--item wrap-->
+						<div class="item-wrap">
+							<div class="item-tile-overview-rows text-body-main">
+								<div class="tile-title">Tokenised shares</div>
+								<div class="tile-row">
+									<div class="tile-help"></div>
+									<div class="tile-row-title">Token price:</div>
+									<div class="tile-row-value">To be announced</div>
+								</div>
+								<div class="tile-row">
+									<div class="tile-help"></div>
+									<div class="tile-row-title">Payment method:</div>
+									<div class="tile-row-value">USDT, USDC</div>
+								</div>
+								<div class="tile-row">
+									<div class="tile-help"></div>
+									<div class="tile-row-title">Place:</div>
+									<div class="tile-row-value">On Credits’ App.</div>
+								</div>
+							</div>
+						</div>
+						<!--/item wrap-->
+						<!--item wrap-->
+						<div class="item-wrap">
+							<div class="item-tile-overview-rows text-body-main">
+								<div class="tile-title">Presentation and Docs:</div>
+								<div class="tile-row">
+									<div class="tile-ico">
+										<img src="./img/icons/file.svg" alt="">
+									</div>
+									<div class="tile-row-title">Teaser (one pager)</div>
+								</div>
+								<div class="tile-row">
+									<div class="tile-ico">
+										<img src="./img/icons/file.svg" alt="">
+									</div>
+									<div class="tile-row-title">Presentation Pitch_deck</div>
+								</div>
+								<div class="tile-row">
+									<div class="tile-ico">
+										<img src="./img/icons/file.svg" alt="">
+									</div>
+									<div class="tile-row-title">Incorporation Documents</div>
+								</div>
+							</div>
+						</div>
+						<!--/item wrap-->
+						<!--item wrap-->
+						<div class="item-wrap">
+							<div class="item-tile-overview-rows text-body-main">
+								<div class="tile-title">Secondary market</div>
+								<div class="tile-row">
+									<div class="tile-help"></div>
+									<div class="tile-row-title">Lockup period:</div>
+									<div class="tile-row-value">6 months after the STO.</div>
+								</div>
+								<div class="tile-row">
+									<div class="tile-help"></div>
+									<div class="tile-row-title">Secondary market:</div>
+									<div class="tile-row-value">Tokens will be traded on: Ambisafe, Orderbook, Credits</div>
+								</div>
+								<div class="tile-row">
+									<div class="tile-row-title">
+										<a href="">Read all conditions</a>
+									</div>
+								</div>
+							</div>
+						</div>
+						<!--/item wrap-->
+					</div>
+					<div class="action-wrap text-body-min">
+						<p>Early access allocation available. Limited offer.</p>
+						<a href="" class="btn button-large">Join the waitlist</a>
+					</div>
+				</div>
+			</div>
+			<!--/main-overview-inner-box-->
 			
 			<!--main-tiles-overview-second-box-->
 			<div class="main-tiles-overview-second-box cnt-section no-pbottom">
