--- a/overview.html
+++ b/overview.html
@@ -277,7 +277,7 @@
 
 
         <!--main-overview-inner-box-->
-        <div class="main-overview-inner-box cnt-section no-pbottom-m">
+        <div class="main-overview-inner-box cnt-section no-pbottom">
             <div class="inner-wrap">
                 <div class="main-title-wrap text-body-large">
                     <div class="page-subtitle title-gradient">Crowdfunding</div>
@@ -290,17 +290,41 @@
                         <div class="item-tile-overview-rows text-body-main">
                             <div class="tile-title">Investment summary</div>
                             <div class="tile-row">
-                                <div class="tile-help"></div>
+                                <div class="tile-help js-help">
+                                    <div class="help-ico"></div>
+                                    <div class="tile-help-content-wrap text-body-main">
+                                        <a href="" class="btn-action-ico ico-close-main js-help-close"></a>
+                                        <div class="h6-title">For Proof reading</div>
+                                        <p>Comment text comment text comment text Comment text comment text <a href="">link to site.com</a></p>
+                                        <p>Comment text comment text comment text Comment text comment text comment text </p>
+                                    </div>
+                                </div>
                                 <div class="tile-row-title">Main-STO target:</div>
                                 <div class="tile-row-value">$25M. Starts in May, 2023</div>
                             </div>
                             <div class="tile-row">
-                                <div class="tile-help"></div>
+                                <div class="tile-help js-help">
+                                    <div class="help-ico"></div>
+                                    <div class="tile-help-content-wrap text-body-main">
+                                        <a href="" class="btn-action-ico ico-close-main js-help-close"></a>
+                                        <div class="h6-title">For Proof reading</div>
+                                        <p>Comment text comment text comment text Comment text comment text <a href="">link to site.com</a></p>
+                                        <p>Comment text comment text comment text Comment text comment text comment text </p>
+                                    </div>
+                                </div>
                                 <div class="tile-row-title">Pre-STO target:</div>
                                 <div class="tile-row-value">$3M. Starts in Mar, 2023</div>
                             </div>
                             <div class="tile-row">
-                                <div class="tile-help"></div>
+                                <div class="tile-help js-help">
+                                    <div class="help-ico"></div>
+                                    <div class="tile-help-content-wrap text-body-main">
+                                        <a href="" class="btn-action-ico ico-close-main js-help-close"></a>
+                                        <div class="h6-title">For Proof reading</div>
+                                        <p>Comment text comment text comment text Comment text comment text <a href="">link to site.com</a></p>
+                                        <p>Comment text comment text comment text Comment text comment text comment text </p>
+                                    </div>
+                                </div>
                                 <div class="tile-row-title">Protect stage:</div>
                                 <div class="tile-row-value">Series A: first users and revenue.</div>
                             </div>
@@ -312,17 +336,41 @@
                         <div class="item-tile-overview-rows text-body-main">
                             <div class="tile-title">Tokenised shares</div>
                             <div class="tile-row">
-                                <div class="tile-help"></div>
+                                <div class="tile-help js-help">
+                                    <div class="help-ico"></div>
+                                    <div class="tile-help-content-wrap text-body-main">
+                                        <a href="" class="btn-action-ico ico-close-main js-help-close"></a>
+                                        <div class="h6-title">For Proof reading</div>
+                                        <p>Comment text comment text comment text Comment text comment text <a href="">link to site.com</a></p>
+                                        <p>Comment text comment text comment text Comment text comment text comment text </p>
+                                    </div>
+                                </div>
                                 <div class="tile-row-title">Token price:</div>
                                 <div class="tile-row-value">To be announced</div>
                             </div>
                             <div class="tile-row">
-                                <div class="tile-help"></div>
+                                <div class="tile-help js-help">
+                                    <div class="help-ico"></div>
+                                    <div class="tile-help-content-wrap text-body-main">
+                                        <a href="" class="btn-action-ico ico-close-main js-help-close"></a>
+                                        <div class="h6-title">For Proof reading</div>
+                                        <p>Comment text comment text comment text Comment text comment text <a href="">link to site.com</a></p>
+                                        <p>Comment text comment text comment text Comment text comment text comment text </p>
+                                    </div>
+                                </div>
                                 <div class="tile-row-title">Payment method:</div>
                                 <div class="tile-row-value">USDT, USDC</div>
                             </div>
                             <div class="tile-row">
-                                <div class="tile-help"></div>
+                                <div class="tile-help js-help">
+                                    <div class="help-ico"></div>
+                                    <div class="tile-help-content-wrap text-body-main">
+                                        <a href="" class="btn-action-ico ico-close-main js-help-close"></a>
+                                        <div class="h6-title">For Proof reading</div>
+                                        <p>Comment text comment text comment text Comment text comment text <a href="">link to site.com</a></p>
+                                        <p>Comment text comment text comment text Comment text comment text comment text </p>
+                                    </div>
+                                </div>
                                 <div class="tile-row-title">Place:</div>
                                 <div class="tile-row-value">On Credits’ App.</div>
                             </div>
@@ -359,12 +407,28 @@
                         <div class="item-tile-overview-rows text-body-main">
                             <div class="tile-title">Secondary market</div>
                             <div class="tile-row">
-                                <div class="tile-help"></div>
+                                <div class="tile-help js-help">
+                                    <div class="help-ico"></div>
+                                    <div class="tile-help-content-wrap text-body-main">
+                                        <a href="" class="btn-action-ico ico-close-main js-help-close"></a>
+                                        <div class="h6-title">For Proof reading</div>
+                                        <p>Comment text comment text comment text Comment text comment text <a href="">link to site.com</a></p>
+                                        <p>Comment text comment text comment text Comment text comment text comment text </p>
+                                    </div>
+                                </div>
                                 <div class="tile-row-title">Lockup period:</div>
                                 <div class="tile-row-value">6 months after the STO.</div>
                             </div>
                             <div class="tile-row">
-                                <div class="tile-help"></div>
+                                <div class="tile-help js-help">
+                                    <div class="help-ico"></div>
+                                    <div class="tile-help-content-wrap text-body-main">
+                                        <a href="" class="btn-action-ico ico-close-main js-help-close"></a>
+                                        <div class="h6-title">For Proof reading</div>
+                                        <p>Comment text comment text comment text Comment text comment text <a href="">link to site.com</a></p>
+                                        <p>Comment text comment text comment text Comment text comment text comment text </p>
+                                    </div>
+                                </div>
                                 <div class="tile-row-title">Secondary market:</div>
                                 <div class="tile-row-value">Tokens will be traded on: Ambisafe, Orderbook, Credits</div>
                             </div>
