--- a/_html/index.html
+++ b/_html/index.html
@@ -34,6 +34,7 @@
 					<li><a href="pitch.html">Pitch</a></li>
 					<li><a href="partnerships.html">Partnerships</a></li>
 					<li><a href="overview.html">Overview</a></li>
+					<li><a href="new-overview.html">New Overview</a></li>
 					<li><a href="bounty.html">Bounty</a></li>
 					<li><a href="ld.html">Landing</a></li>
 					<li><a href="commands.html">Commands</a></li>
