--- a/_html/new-overview.html
+++ b/_html/new-overview.html
@@ -68,7 +68,7 @@
 							<div class="slider-preview-wrap">
 								<div class="slider">
 									<div class="sl-wrap active">
-										<a href="" class="elm-photo photo-cover" data-slide="0">
+										<a href="" class="elm-photo photo-cover photo-video" data-slide="0">
 											<img src="./img/video-inner.jpg" alt="">
 										</a>
 									</div>
@@ -101,7 +101,7 @@
 				<!--main-highlightts-box-->
 				<div class="main-highlights-box cnt-section no-ptop">
 					<div class="inner-wrap">
-						<div class="main-title-wrap title-left">
+						<div class="main-title-wrap title-left text-body">
 							<h2 class="h4-title">Highlights</h2>
 							<p>As of Feb 2023, Credits is an operational, compliant neobank.</p>
 							<p>It works on Exceptional in-house payment processing platform developed from scratch.</p>
@@ -113,7 +113,7 @@
 							<div class="items-wrap">
 								<!--item wrap-->
 								<div class="item-wrap">
-									<div class="item-tile-hightlights text-body">
+									<div class="item-tile-hightlights text-body-small">
 										<div class="tile-inner-wrap">
 											<div class="tile-title h5-title">Become an early investor <br><span class="title-gradient">in&nbsp;Credits NeoBank.</span></div>
 											<p class="">This is a unique opportunity for investors from more than 60 countries to participate in Credits’ investment round. This campaign is similar to an IPO. </p>
@@ -136,7 +136,7 @@
 								<!--/item wrap-->
 								<!--item wrap-->
 								<div class="item-wrap">
-									<div class="item-tile-hightlights text-body">
+									<div class="item-tile-hightlights text-body-small">
 										<div class="tile-inner-wrap">
 											<div class="tile-title h5-title">Investment summary</div>
 											<div class="tile-info">
