--- a/_html/overview.html
+++ b/_html/overview.html
@@ -631,74 +631,8 @@
 			</div>
 			<!--/main-questions-box-->
 			
-			<!--main-menu-box-->
-			<div class="main-menu-box cnt-section">
-				<div class="inner-wrap">
-					<div class="main-title-wrap text-body">
-						<h4 class="h4-title title-gradient">Find out more</h4>
-						<p> Take part in the allotment of shares.</p>
-					</div>
-					<ul class="menu">
-						<li>
-							<a href="" class="btn-menu active">
-					<span class="button-ico">
-						<img src="./img/icons/menu01.svg" alt="">
-					</span>
-								<span class="button-title">Overview</span>
-							</a>
-						</li>
-						<li>
-							<a href="" class="btn-menu">
-					<span class="button-ico">
-						<img src="./img/icons/menu02.svg" alt="">
-					</span>
-								<span class="button-title">Pitch</span>
-							</a>
-						</li>
-						<li>
-							<a href="" class="btn-menu">
-					<span class="button-ico">
-						<img src="./img/icons/menu03.svg" alt="">
-					</span>
-								<span class="button-title">Product</span>
-							</a>
-						</li>
-						<li>
-							<a href="" class="btn-menu">
-					<span class="button-ico">
-						<img src="./img/icons/menu04.svg" alt="">
-					</span>
-								<span class="button-title">Road map</span>
-							</a>
-						</li>
-						<li>
-							<a href="" class="btn-menu">
-					<span class="button-ico">
-						<img src="./img/icons/menu05.svg" alt="">
-					</span>
-								<span class="button-title">Partnerships</span>
-							</a>
-						</li>
-						<li>
-							<a href="" class="btn-menu">
-					<span class="button-ico">
-						<img src="./img/icons/STO.svg" alt="">
-					</span>
-								<span class="button-title">STO</span>
-							</a>
-						</li>
-						<li>
-							<a href="" class="btn-menu">
-					<span class="button-ico">
-						<img src="./img/icons/menu07.svg" alt="">
-					</span>
-								<span class="button-title">Bounty. Airdrop</span>
-							</a>
-						</li>
-					</ul>
-				</div>
-			</div>
-			<!--/main-menu-box-->
+			<!-- build:section bottommenu -->
+			<!-- /build -->
 			
 			
 			
