--- a/products.html
+++ b/products.html
@@ -117,6 +117,8 @@
         <!--main-menu-box-->
         <div class="main-menu-box menu-top cnt-section">
             <div class="inner-wrap">
+                <div class="btn-action-ico ico-nav ico-nav-prev button-menu-prev"></div>
+                <div class="btn-action-ico ico-nav ico-nav-next button-menu-next"></div>
                 <ul class="menu">
                     <li>
                         <a href="" class="btn-menu active">
@@ -124,14 +126,6 @@
                                 <img src="./img/icons/menu01.svg" alt="">
                             </span>
                             <span class="button-title">Overview</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="" class="btn-menu">
-                            <span class="button-ico">
-                                <img src="./img/icons/menu02.svg" alt="">
-                            </span>
-                            <span class="button-title">Pitch</span>
                         </a>
                     </li>
                     <li>
@@ -169,9 +163,17 @@
                     <li>
                         <a href="" class="btn-menu">
                             <span class="button-ico">
-                                <img src="./img/icons/menu07.svg" alt="">
+                                <img src="./img/icons/menu08.svg" alt="">
                             </span>
-                            <span class="button-title">Bounty. Airdrop</span>
+                            <span class="button-title">Airdrop</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="btn-menu">
+                            <span class="button-ico">
+                                <img src="./img/icons/menu09.svg" alt="">
+                            </span>
+                            <span class="button-title">Ambassador</span>
                         </a>
                     </li>
                 </ul>
@@ -716,6 +718,8 @@
                     <h4 class="h4-title title-gradient">Find out more</h4>
                     <p> Take part in the allotment of shares.</p>
                 </div>
+                <div class="btn-action-ico ico-nav ico-nav-prev button-menu-prev"></div>
+                <div class="btn-action-ico ico-nav ico-nav-next button-menu-next"></div>
                 <ul class="menu">
                     <li>
                         <a href="" class="btn-menu active">
@@ -723,14 +727,6 @@
                                 <img src="./img/icons/menu01.svg" alt="">
                             </span>
                             <span class="button-title">Overview</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="" class="btn-menu">
-                            <span class="button-ico">
-                                <img src="./img/icons/menu02.svg" alt="">
-                            </span>
-                            <span class="button-title">Pitch</span>
                         </a>
                     </li>
                     <li>
@@ -768,9 +764,17 @@
                     <li>
                         <a href="" class="btn-menu">
                             <span class="button-ico">
-                                <img src="./img/icons/menu07.svg" alt="">
+                                <img src="./img/icons/menu08.svg" alt="">
                             </span>
-                            <span class="button-title">Bounty. Airdrop</span>
+                            <span class="button-title">Airdrop</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="btn-menu">
+                            <span class="button-ico">
+                                <img src="./img/icons/menu09.svg" alt="">
+                            </span>
+                            <span class="button-title">Ambassador</span>
                         </a>
                     </li>
                 </ul>
