--- a/new-overview.html
+++ b/new-overview.html
@@ -390,6 +390,20 @@
         </div>
         <!--/main-bg-box-->
 
+        <!--inner-menu-box-->
+        <div class="inner-menu-box menu-border cnt-section text-body-small">
+            <div class="inner-wrap">
+                <ul class="menu">
+                    <li><a href="">Solution</a></li>
+                    <li><a href="">Traction</a></li>
+                    <li><a href="">Team</a></li>
+                    <li><a href="">Investment</a></li>
+                    <li><a href="">FAQ</a></li>
+                </ul>
+            </div>
+        </div>
+        <!--/inner-menu-box-->
+
 
         <!--inner-head-box-->
         <div class="inner-head-box cnt-section">
