--- a/_html/index.html
+++ b/_html/index.html
@@ -43,6 +43,7 @@
 					<li><a href="" class="js-popup-open" data-popup="popup-main">Popup main</a></li>
 					<li><a href="" class="js-popup-open" data-popup="popup-STO">Popup STO</a></li>
 					<li><a href="" class="js-popup-open" data-popup="popup-STO-succefull">Popup STO succefull</a></li>
+					<li><a href="" class="js-popup-open" data-popup="popup-how-it-works">Popup How It Works succefull</a></li>
 					
 				</ul>
             </div>
