--- a/bounty.html
+++ b/bounty.html
@@ -871,6 +871,69 @@
             </div>
         </div><!--/popup-outer-box-->
 
+        <div class="popup-outer-box active" id="popup-how-it-works">
+            <div class="popup-box popup-how-it-works">
+                <a href="" class="btn-action-ico ico-close-main js-popup-close"></a>
+                <div class="popup-title-wrap">
+                    <div class="popup-title">Become a Credits.com investor </div>
+                </div>
+                <div class="popup-content-wrap">
+                    <div class="popup-tiles-box">
+                        <div class="items-wrap">
+                            <!--item wrap-->
+                            <div class="item-wrap">
+                                <div class="item-tile-popup">
+                                    <div class="tile-title-wrap">
+                                        <div class="tile-subtitle">Step 1</div>
+                                        <div class="tile-title">Download</div>
+                                    </div>
+                                    <div class="tile-text">
+                                        <p>Скачай приложение и пройди КУС. Стандартная процедура для всех бирж и крипто-кошельков.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <!--/item wrap-->
+                            <!--item wrap-->
+                            <div class="item-wrap">
+                                <div class="item-tile-popup">
+                                    <div class="tile-title-wrap">
+                                        <div class="tile-subtitle">Step 2</div>
+                                        <div class="tile-title">Deposit</div>
+                                    </div>
+                                    <div class="tile-text">
+                                        <p>Разные способы пополнения счета:</p>
+                                        <p>
+                                            Криптовалютой <br>
+                                            Картой VISA, Mastercard <br>
+                                            Банковским переводом SEPA. SWIFT (for direct investments)
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <!--/item wrap-->
+                            <!--item wrap-->
+                            <div class="item-wrap">
+                                <div class="item-tile-popup">
+                                    <div class="tile-title-wrap">
+                                        <div class="tile-subtitle">Step 3</div>
+                                        <div class="tile-title">Buy Credits.com investor</div>
+                                    </div>
+                                    <div class="tile-text">
+                                        <p>Купи UCSS в Credits App. <br>Операция мгновенная.</p>
+                                        <p>Токен будет доступен для купли-продаже на вторичном рынке через 6 месяцев после STO.</p>
+                                    </div>
+                                    <div class="tile-action">
+                                        <a href="" class="btn">Get started</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <!--/item wrap-->
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div><!--/popup-outer-box-->
+
 
         <div class="elm-overlay"></div>
 
