--- a/news.html
+++ b/news.html
@@ -1157,7 +1157,7 @@
             </div>
         </div><!--/popup-outer-box-->
 
-        <div class="popup-outer-box active" id="popup-how-it-works">
+        <div class="popup-outer-box" id="popup-how-it-works">
             <div class="popup-box popup-how-it-works">
                 <a href="" class="btn-action-ico ico-close-main js-popup-close"></a>
                 <div class="popup-title-wrap">
