--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
                 <li><a href="roadmap.html">Roadmap</a></li>
                 <li><a href="products.html">Products</a></li>
                 <li><a href="pitch.html">Pitch</a></li>
+                <li><a href="pitch-new.html">Pitch NEW</a></li>
                 <li><a href="partnerships.html">Partnerships</a></li>
                 <li><a href="overview.html">Overview</a></li>
                 <li><a href="new-overview.html">New Overview</a></li>
